--- a/front-end/WebContent/index.html
+++ b/front-end/WebContent/index.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+<style type="text/css">
+body {
+	text-transform: uppercase;
+}
+</style>
+
+
 </head>
 <body>
+	<!-- Mini curso front-end -->
+	<form action="">
+		<table style="background: #7FFFD4;">
+			<tr>
+				<td><label>Nome:</label></td>
+				<td><input type="text" id="nome" name="nome"
+					style="border-radius: 5px;"></td>
+			</tr>
+
+			<tr>
+				<td><label>Login:</label></td>
+				<td><input type="text" id="login" name="login"
+					style="border-radius: 5px;"></td>
+			</tr>
+			<tr>
+				<td><label>Senha:</label></td>
+				<td><input type="password" id="senha" name="senha"
+					style="border-radius: 5px;"></td>
+			</tr>
+
+			<tr>
+				<td />
+				<td><input type="submit" value="Salvar"
+					style="width: 100%; border-radius: 5px;" onclick="validarDados()"></td>
+			</tr>
+		</table>
+	</form>
+	<script type="text/javascript">
+		function validarDados() {
+			var nome = document.getElementById("nome").value;
+			alert(nome);
+		}
+		
+		
+	</script>
+
+
 
 </body>
 </html>
